add button options

--- a/scss/_settings_options.scss
+++ b/scss/_settings_options.scss
@@ -41,6 +41,20 @@ $enable-table-colors:                       true !default; // true
 $enable-table-scroll:                       true !default; // true
 $enable-table-scroll-responsive:            true !default; // true
 
+// Button
+$enable-btn:                                true !default; // true
+$enable-btn-common:                         true !default; // true
+$enable-btn-default:                        true !default; // true
+$enable-btn-colors:                         true !default; // true
+$enable-btn-outline:                        true !default; // true
+$enable-btn-outline-colors:                 true !default; // true
+$enable-btn-link:                           true !default; // true
+$enable-btn-sizes:                          true !default; // true
+$enable-btn-icon:                           true !default; // true
+$enable-btn-icon-sizes:                     true !default; // true
+$enable-btn-block:                          true !default; // true
+$enable-btn-check:                          true !default; // true
+
 // Utility options
 $enable-utility-bg:                         true !default;  // true
 $enable-utility-bg-colors:                  true !default;  // true
