--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -668,17 +668,7 @@ $form-check-inline-input-margin-x: .3125rem !default;
 $form-group-margin-bottom:      1rem !default;
 $form-row-gutter:               .3125rem !default;
 
-$input-group-addon-color:        $input-color !default;
-$input-group-addon-bg:           $uibase-50 !default;
-$input-group-addon-border-color: $input-border-color !default;
-
 $form-inline-breakpoint:         sm !default;
-
-// Base input/select height calculation
-// Additional ones for each size are done during size processing generation
-$input-height-inner:    ($font-size-base * $input-line-height) + ($input-padding-y * 2) !default;
-$input-height-outer:    calc(#{$input-height-inner} + #{($border-width * 2)}) !default;
-
 
 // Custom form controls
 // =====
@@ -717,7 +707,7 @@ $custom-radio-checked-icon:         url("data:image/svg+xml;charset=utf8,%3Csvg 
 
 $custom-switch-gutter:              2.5rem !default;
 $custom-switch-width:               2rem !default;
-$custom-switch-track-height-ratio:  1 !default;
+$custom-switch-track-height:        1rem !default;
 $custom-switch-track-bg:            $uibase-50 !default;
 $custom-switch-track-radius:        1rem !default;
 $custom-switch-track-border-width:  $border-width !default;
@@ -795,6 +785,13 @@ $form-feedback-icon-valid-color:    $form-feedback-valid-color !default;
 $form-feedback-icon-valid-image:    str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='#{$form-feedback-icon-valid-color}' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3E%3C/svg%3E"), "#", "%23") !default;
 $form-feedback-icon-invalid-color:  $form-feedback-invalid-color !default;
 $form-feedback-icon-invalid-image:  str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='#{palette($danger, 500)}' viewBox='-2 -2 7 7'%3E%3Cpath stroke='#{$form-feedback-icon-invalid-color}' d='M0 0l3 3m0-3L0 3'/%3E%3Ccircle r='.5'/%3E%3Ccircle cx='3' r='.5'/%3E%3Ccircle cy='3' r='.5'/%3E%3Ccircle cx='3' cy='3' r='.5'/%3E%3C/svg%3E"), "#", "%23") !default;
+
+
+// Input group
+// =====
+$input-group-addon-color:        $input-color !default;
+$input-group-addon-bg:           $uibase-50 !default;
+$input-group-addon-border-color: $input-border-color !default;
 
 
 // Progress bars
