--- a/scss/figuration.scss
+++ b/scss/figuration.scss
@@ -12,7 +12,7 @@
 @import "settings";
 
 // Enable/disable granular options
-@import "settings_options";
+@import "settings-options";
 
 // Mixins
 @import "mixins";
