add missing enable option

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -104,6 +104,9 @@ $enable-badge-colors:                       true !default; // true
 $enable-badge-outline:                      true !default; // true
 $enable-badge-outline-colors:               true !default; // true
 
+// Breadcrumb
+$enable-breadcrumb:                         true !default; // true
+
 // Input Group
 $enable-input-group:                        true !default; // true
 
