add button group

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -107,6 +107,13 @@ $enable-badge-outline-colors:               true !default; // true
 // Breadcrumb
 $enable-breadcrumb:                         true !default; // true
 
+// Button Group
+$enable-btn-group:                          true !default; // true
+$enable-btn-group-horizontal:               true !default; // true
+$enable-btn-group-vertical:                 true !default; // true
+$enable-btn-group-sizing:                   true !default; // true
+$enable-btn-toolbar:                        true !default; // true
+
 // Input Group
 $enable-input-group:                        true !default; // true
 
