--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -114,6 +114,33 @@ $enable-btn-group-vertical:                 true !default; // true
 $enable-btn-group-sizing:                   true !default; // true
 $enable-btn-toolbar:                        true !default; // true
 
+// Cards
+$enable-card:                               true !default;
+$enable-card-common:                        true !default;
+$enable-card-body:                          true !default;
+$enable-card-title:                         true !default;
+$enable-card-subtitle:                      true !default;
+$enable-card-text:                          true !default;
+$enable-card-link:                          true !default;
+$enable-card-list:                          true !default;
+$enable-card-table:                         true !default;
+$enable-card-header:                        true !default;
+$enable-card-footer:                        true !default;
+$enable-card-header-tabs:                   true !default;
+$enable-card-header-pills:                  true !default;
+$enable-card-img:                           true !default;
+$enable-card-img-overlay:                   true !default;
+$enable-card-horizontal:                    true !default;
+$enable-card-deck:                          true !default;
+$enable-card-deck-common:                   true !default;
+$enable-card-deck-responsive:               true !default;
+$enable-card-group:                         true !default;
+$enable-card-group-common:                  true !default;
+$enable-card-group-responsive:              true !default;
+$enable-card-columns:                       true !default;
+$enable-card-columns-common:                true !default;
+$enable-card-columns-responsive:            true !default;
+
 // Input Group
 $enable-input-group:                        true !default; // true
 
