--- a/scss/component/_card.scss
+++ b/scss/component/_card.scss
@@ -1,24 +1,22 @@
 @if $enable-card {
-    @if $enable-card-common {
-        .card {
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            min-width: 0;
-            margin-bottom: $card-margin-bottom;
-            word-wrap: break-word;
-            background-color: $card-bg;
-            border: $card-border-width solid $card-border-color;
-            @include border-radius($card-border-radius);
+    .card {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        min-width: 0;
+        margin-bottom: $card-margin-bottom;
+        word-wrap: break-word;
+        background-color: $card-bg;
+        border: $card-border-width solid $card-border-color;
+        @include border-radius($card-border-radius);
 
-            > hr {
-                margin-right: 0;
-                margin-left: 0;
-            }
+        > hr {
+            margin-right: 0;
+            margin-left: 0;
         }
     }
 
-    @if $enable-card-common {
+    @if $enable-card-body {
         .card-body {
             // Enable `flex-grow: 1` for decks and groups so that card blocks take up
             // as much space as possible, ensuring footers are aligned to the bottom.
@@ -365,7 +363,7 @@
         @each $breakpoint in $card-deck-breakpoints {
             $bprule: breakpoint-designator($breakpoint);
 
-            @if ($enable-card-deck-common and $bprule == "") or ($enable-card-deck-responsive and $bprule != "") {
+            @if $bprule == "" or ($enable-card-deck-responsive and $bprule != "") {
                 .card-deck#{$bprule} {
                     @extend %card-deck-base;
 
@@ -400,7 +398,7 @@
 
                 @each $bp-inner in map-keys($grid-breakpoints) {
                     $bprule-inner: breakpoint-designator($bp-inner);
-                    @if ($enable-card-deck-common and $bprule-inner == "") or ($enable-card-deck-responsive and $bprule-inner != "") {
+                    @if $bprule-inner == "" or ($enable-card-deck-responsive and $bprule-inner != "") {
                         .card-deck#{$bprule-inner} {
                             @extend %card-deck-gutter;
                         }
@@ -423,7 +421,7 @@
         @each $breakpoint in $card-group-breakpoints {
             $bprule: breakpoint-designator($breakpoint);
 
-            @if ($enable-card-group-common and $bprule == "") or ($enable-card-group-responsive and $bprule != "") {
+            @if $bprule == "" or ($enable-card-group-responsive and $bprule != "") {
                 .card-group#{$bprule} {
                     @extend %card-group-base;
 
@@ -541,7 +539,7 @@
         @each $breakpoint in $card-columns-breakpoints {
             $bprule: breakpoint-designator($breakpoint);
 
-            @if ($enable-card-columns-common and $bprule == "") or ($enable-card-columns-responsive and $bprule != "") {
+            @if $bprule == "" or ($enable-card-columns-responsive and $bprule != "") {
                 @include media-breakpoint-up(#{$breakpoint}) {
                     .card-columns#{$bprule} {
                         margin-bottom: $card-margin-bottom;
